--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 layout: default
 title: Home
 ---
-<h1>{{ "Hello World!" | downcase }}</h1>
+<h1>{{ "Welcome to the LeetCode Collection Site!" | downcase }}</h1>
